# bstone

./: .gitignore  PORTING.md  build-tvos.sh  fetch-data.sh
cmake/: tvos.toolchain.cmake
src/: CMakeLists.txt
src/bstone/: CMakeLists.txt
src/bstone/src/: 3d_agent.cpp  3d_inter.cpp  3d_main.cpp  3d_menu.cpp  3d_menu.h  3d_play.cpp  bstone_configurations.cpp  bstone_entry_point.cpp  bstone_entry_point.h  bstone_icloud.h  bstone_icloud_tvos.mm  bstone_platform.h  bstone_process_posix.cpp  bstone_sw_video.cpp  bstone_sys_event.h  bstone_sys_event_mgr_sdl2.cpp  bstone_sys_mouse_mgr_sdl2.cpp  bstone_sys_special_path.h  bstone_sys_special_path_sdl2.cpp  bstone_sys_system_mgr_sdl2.cpp  bstone_sys_texture.cpp  bstone_sys_texture.h  bstone_sys_texture_sdl2.cpp  bstone_sys_window_sdl2.cpp  bstone_tvos_scene_delegate.mm  bstone_video.h  id_ca.cpp  id_in.cpp  id_in.h  id_vh.cpp  id_vh.h  id_vl.cpp  id_vl.h  jm_free.cpp  jm_tp.cpp
src/bstone/src/resources/tvos/: Info.plist.in  bstone.entitlements
src/bstone/src/resources/tvos/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Back.imagestacklayer/Content.imageset/: Contents.json
src/bstone/src/resources/tvos/Assets.xcassets/App Icon & Top Shelf Image.brandassets/App Icon.imagestack/Front.imagestacklayer/Content.imageset/: Contents.json
src/bstone/src/resources/tvos/Assets.xcassets/App Icon & Top Shelf Image.brandassets/Top Shelf Image.imageset/: Contents.json
src/lib/sdl2/: bstone_sdl2_changelog.md
src/lib/sdl2/src/src/video/uikit/: SDL_uikitview.m  SDL_uikitwindow.m
